Add Mastodon link to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ phone: +1 437-887-6936
 address: Toronto, ON
 github: https://github.com/hyphacoop
 linkedin: https://www.linkedin.com/company/hyphacoop/
+mastodon: https://cosocial.ca/@hyphacoop
 twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
 rss: "/feed.xml"
