--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
         if: >
           github.ref == 'refs/heads/master' ||
           (github.event_name == 'pull_request' && github.base_ref == 'master')
-        run: echo ${{ secrets.ENCODED_DP_AP_KEY_PRODUCTION }} | base64 --decode > /tmp/secret.pem
+        run: echo ${{ secrets.ENCODED_DP_AP_KEY_PRODUCTION }} | base64 --decode > /tmp/secret.key
 
       - run: make build-dweb
 
@@ -89,7 +89,7 @@ jobs:
           site_url: hypha.coop
 
       - name: Notify AP
-        run: bundle exec jekyll notify --key /tmp/secret.pem --verbose
+        run: bundle exec jekyll notify --key /tmp/secret.key --verbose
 
       - name: Commit ActivityPub Data
         uses: EndBug/add-and-commit@v9 
