Update last_modified_at timestamps in activity_pub.yml

--- a/_data/activity_pub.yml
+++ b/_data/activity_pub.yml
@@ -112,10 +112,12 @@ notifications:
     action: done
     id: https://hypha.coop/dripline/non-fungible-treasures/
     created_at: 1708476823
+    last_modified_at: 1710251436
   openings/business-development-lead.jsonld:
     action: done
     id: https://hypha.coop/openings/business-development-lead/
     created_at: 1709779993
+    last_modified_at: 1710251436
 actor_url: https://staging.hypha.coop/about.jsonld
 actor: "@dripline@staging.hypha.coop"
 public_key_url: https://staging.hypha.coop/about.jsonld#main-key
