--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@ mastodon: https://cosocial.ca/@hyphacoop
 twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
 rss: "/feed.xml"
-# facebook: https://www.facebook.com/hyphacoop/
-# instagram: https://instagram.com/hyphacoop/
-url: "https://staging.hypha.coop"
+url: https://staging.hypha.coop
 footer: Hypha Worker Co-operative Inc.<br>Ontario Corporation No. 5019866
 
 description: >-
