--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Set Site URL based on branch
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/master" ]] || [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "master" ]]; then
-            sed -i 's|url: "https://staging.hypha.coop"|url: "https://hypha.coop"|' _config.yml
+            sed -i 's|url:.*https://staging.hypha.coop.*|url: https://hypha.coop|' _config.yml
           fi
 
       - name: Set DP Social URL based on branch
