--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,15 +90,15 @@ jobs:
           refresh_token: ${{ secrets.DISTRIBUTED_PRESS_PRODUCTION_TOKEN}}
           site_url: hypha.coop
 
-      - name: Notify AP
-        run: bundle exec jekyll notify --key /tmp/secret.key --verbose --trace
-
-      - name: Commit ActivityPub Data
-        uses: EndBug/add-and-commit@v9 
-        with:
-          add: '_data/activity_pub.yml'
-          default_author: github_actions
-          message: 'Commit ActivityPub Data'
-          fetch: true
+#      - name: Notify AP
+#        run: bundle exec jekyll notify --key /tmp/secret.key --verbose --trace
+#
+#     - name: Commit ActivityPub Data
+#        uses: EndBug/add-and-commit@v9 
+#        with:
+#          add: '_data/activity_pub.yml'
+#          default_author: github_actions
+#          message: 'Commit ActivityPub Data'
+#          fetch: true
 
 
