--- a/_data/activity_pub.yml
+++ b/_data/activity_pub.yml
@@ -132,8 +132,8 @@ notifications:
     created_at: 1721940512
   dripline/co-creation-lab-vision-essay.jsonld:
     action: done
-    id: https://staging.hypha.coop/dripline/co-creation-lab-vision-essay.jsonld
+    id: https://hypha.coop/dripline/co-creation-lab-vision-essay.jsonld
     created_at: 1725823254
-actor_url: https://staging.hypha.coop/about.jsonld
-actor: "@dripline@staging.hypha.coop"
-public_key_url: https://staging.hypha.coop/about.jsonld#main-key
+actor_url: https://hypha.coop/about.jsonld
+actor: "@dripline@hypha.coop"
+public_key_url: https://hypha.coop/about.jsonld#main-key
