--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
         run: |
           make build-dweb
 
-      - run: make check
+#      - run: make check
 
       - name: Publish to Distributed Press Staging
         if: ${{ github.ref == 'refs/heads/staging' }}
