Update _config.yml to include updated timestamp

--- a/_config.yml
+++ b/_config.yml
@@ -91,5 +91,6 @@ activity_pub:
   - "assets/images/hypha-social.png"
   images:
   - "assets/images/social-banner.png"
+  updated: 2024-10-24 12:30:00
 
 include: [.well-known]
