--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
 rss: "/feed.xml"
 url: "https://hypha.coop"
+lang: "en"
 footer: Hypha Worker Co-operative Inc.<br>Ontario Corporation No. 5019866
 
 description: >-
