--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ linkedin: https://www.linkedin.com/company/hyphacoop/
 mastodon: https://cosocial.ca/@hyphacoop
 twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
+newsletter: https://newsletter.hypha.coop
 rss: "/feed.xml"
 url: "https://hypha.coop"
 footer: Hypha Worker Co-operative Inc.<br>Ontario Corporation No. 5019866
