Add Bluesky link to config and footer

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ github: https://github.com/hyphacoop
 linkedin: https://www.linkedin.com/company/hyphacoop/
 mastodon: https://cosocial.ca/@hyphacoop
 twitter: https://twitter.com/hyphacoop/
+bluesky: https://bsky.app/profile/hypha.coop
 handbook: https://link.hypha.coop/handbook
 rss: "/feed.xml"
 url: "https://hypha.coop"
