--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ address: Toronto, ON
 github: https://github.com/hyphacoop
 linkedin: https://www.linkedin.com/company/hyphacoop/
 mastodon: https://cosocial.ca/@hyphacoop
-twitter: https://twitter.com/hyphacoop/
+twitter: https://x.com/hyphacoop/
 bluesky: https://bsky.app/profile/hypha.coop
-handbook: https://link.hypha.coop/handbook
+handbook: https://handbook.hypha.coop
 newsletter: https://newsletter.hypha.coop
 rss: "/feed.xml"
 url: "https://hypha.coop"
