--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,19 @@ jobs:
       - name: Install Brotli dependencies
         run: sudo apt-get update && sudo apt-get install -y libbrotli-dev
 
+      # Install Sequoia (AT Protocol / Standard.site)
+      - name: Install Sequoia
+        if: github.ref == 'refs/heads/master' || (github.event_name == 'pull_request' && github.base_ref == 'master')
+        run: npm i -g sequoia-cli
+
+      # Publish to AT Protocol (before build so inject can run after)
+      - name: Publish to ATProto
+        if: github.ref == 'refs/heads/master' || (github.event_name == 'pull_request' && github.base_ref == 'master')
+        env:
+          ATP_IDENTIFIER: ${{ secrets.ATP_IDENTIFIER }}
+          ATP_APP_PASSWORD: ${{ secrets.ATP_APP_PASSWORD }}
+        run: sequoia publish
+
       # Build Jekyll Site
       - run: echo "Building Jekyll site"
       - run: sudo gem install bundler
@@ -76,6 +89,11 @@ jobs:
 
       - run: make check
 
+      # Inject AT URI link tags into built HTML (Standard.site verification)
+      - name: Inject Sequoia link tags
+        if: github.ref == 'refs/heads/master' || (github.event_name == 'pull_request' && github.base_ref == 'master')
+        run: sequoia inject
+
       - name: Publish to Distributed Press Staging
         if: ${{ github.ref == 'refs/heads/staging' }}
         uses: hyphacoop/actions-distributed-press@v1.1.0
@@ -98,13 +116,13 @@ jobs:
         if: github.ref == 'refs/heads/master' || (github.event_name == 'pull_request' && github.base_ref == 'master')
         run: bundle exec jekyll notify --key /tmp/secret.key --verbose --trace
 
-      - name: Commit ActivityPub Data
+      - name: Commit ActivityPub and Sequoia Data
         if: github.ref == 'refs/heads/master' || (github.event_name == 'pull_request' && github.base_ref == 'master')
         uses: EndBug/add-and-commit@v9 
         with:
-          add: '_data/activity_pub.yml'
+          add: '_data/activity_pub.yml,.sequoia-state.json,_posts'
           default_author: github_actions
-          message: 'Commit ActivityPub Data'
+          message: 'Commit ActivityPub and Sequoia data'
           fetch: true
 
 
